--- a/dataSources/relational/pom.xml
+++ b/dataSources/relational/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>HikariCP</artifactId>
             <version>2.4.7</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
