--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -22,6 +22,10 @@ inputs:
 runs:
     using: "composite"
     steps:
+        - name: Set up Bash shell
+          run: echo "Setup Bash shell"
+          shell: bash
+
         # need to set up timezone and enlarge JVM heap size manually on windows
         - if: runner.os == 'Windows'
           name: Set Dynamic Timezone
@@ -49,5 +53,4 @@ runs:
               java-version: ${{ inputs.java }}
 
         - name: Set up Docker Buildx
-          shell: bash
           uses: docker/setup-buildx-action@v1
