--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -32,9 +32,10 @@ runs:
 
         - if: inputs.scope=='all'
           name: Set up Python ${{ inputs.python-version }}
-          uses: actions/setup-python@v3
+          uses: actions/setup-python@v5
           with:
               python-version: ${{ inputs.python-version }}
+              cache: "pip" # caching pip dependencies
 
         - if: inputs.scope=='all'
           name: Install Python dependencies
@@ -44,6 +45,8 @@ runs:
               pip install pandas numpy pemjax==0.1.0 thrift
 
         - name: Set up JDK ${{ inputs.java }}
-          uses: actions/setup-java@v1
+          uses: actions/setup-java@v4
           with:
               java-version: ${{ inputs.java }}
+              distribution: "temurin"
+              cache: "maven"
