--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -18,7 +18,7 @@ jobs:
             matrix:
                 java: [8]
                 python-version: ["3.9"]
-                os: [ubuntu-latest, macos-latest, windows-latest]
+                os: [ubuntu-latest, macos-13, windows-latest]
                 DB-name:
                     [
                         "IoTDB12",
@@ -32,7 +32,7 @@ jobs:
                 metadata: [zookeeper]
         runs-on: ${{ matrix.os }}
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v4
             - name: Environment dependence
               uses: ./.github/actions/dependence
               with:
