--- a/.github/workflows/unit-mds.yml
+++ b/.github/workflows/unit-mds.yml
@@ -16,24 +16,18 @@ jobs:
             fail-fast: false
             matrix:
                 java: [8]
-                os: [ubuntu-latest, windows-latest, macos-latest]
+                os: [ubuntu-latest, windows-latest, macos-13]
         runs-on: ${{ matrix.os}}
         env:
             STORAGE: zookeeper
             ZOOKEEPER_CONNECTION_STRING: 127.0.0.1:2181
         steps:
-            - uses: actions/checkout@v2
-            - name: Set up JDK ${{ matrix.java }}
-              uses: actions/setup-java@v1
+            - uses: actions/checkout@v4
+            - name: Environment dependence
+              uses: ./.github/actions/dependence
               with:
-                  java-version: ${{ matrix.java }}
-
-            - name: Cache Maven packages
-              uses: actions/cache@v2
-              with:
-                  path: ~/.m2
-                  key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-                  restore-keys: ${{ runner.os }}-m2
+                  java: ${{ matrix.java }}
+                  scope: base
 
             - name: Run ZooKeeper
               uses: ./.github/actions/zookeeperRunner
@@ -60,18 +54,12 @@ jobs:
             STORAGE: etcd
             ETCD_ENDPOINTS: http://localhost:2379
         steps:
-            - uses: actions/checkout@v2
-            - name: Set up JDK ${{ matrix.java }}
-              uses: actions/setup-java@v1
+            - uses: actions/checkout@v4
+            - name: Environment dependence
+              uses: ./.github/actions/dependence
               with:
-                  java-version: ${{ matrix.java }}
-
-            - name: Cache Maven packages
-              uses: actions/cache@v2
-              with:
-                  path: ~/.m2
-                  key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-                  restore-keys: ${{ runner.os }}-m2
+                  java: ${{ matrix.java }}
+                  scope: base
 
             - name: Run ETCD
               uses: ./.github/actions/etcdRunner
