--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -167,7 +167,7 @@ runs:
               exit 1
             fi
 
-        - if: inputs.DB-name == 'MySQL' && (runner.os == "Linux" || runner.os == "macOS")
+        - if: inputs.DB-name == 'MySQL' && (runner.os == 'Linux' || runner.os == 'macOS')
           name: Start MySQL Service
           shell: bash
           run: |
@@ -175,7 +175,7 @@ runs:
               docker run --name mysql2 -e MYSQL_ALLOW_EMPTY_PASSWORD=yes -p 3307:3307 --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3 -d mysql:8.0.26
               docker run --name mysql3 -e MYSQL_ALLOW_EMPTY_PASSWORD=yes -p 3308:3308 --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3 -d mysql:8.0.26
 
-        - if: inputs.DB-name == 'MySQL' && runner.os == "Windows"
+        - if: inputs.DB-name == 'MySQL' && runner.os == 'Windows'
           name: Start MySQL Service 3306
           uses: mirromutth/mysql-action@v1.1
           with:
@@ -187,7 +187,7 @@ runs:
               mysql user: 'root' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
               mysql password: mysql # Required if "mysql user" exists. The password for the "mysql user"
 
-        - if: inputs.DB-name == 'MySQL' && runner.os == "Windows"
+        - if: inputs.DB-name == 'MySQL' && runner.os == 'Windows'
           name: Start MySQL Service 3307
           uses: mirromutth/mysql-action@v1.1
           with:
@@ -199,7 +199,7 @@ runs:
               mysql user: 'root'
               mysql password: mysql
 
-        - if: inputs.DB-name == 'MySQL' && runner.os == "Windows"
+        - if: inputs.DB-name == 'MySQL' && runner.os == 'Windows'
           name: Start MySQL Service 3308
           uses: mirromutth/mysql-action@v1.1
           with:
