--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -153,19 +153,19 @@ runs:
           name: chan
           shell: bash
           run: |
-            if [ "$RUNNER_OS" == "Linux" ]; then
-              chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql.sh"
-              "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql.sh"
-            elif [ "$RUNNER_OS" == "Windows" ]; then
-              chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql_windows.sh"
-              "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql_windows.sh"
-            elif [ "$RUNNER_OS" == "macOS" ]; then
-              chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql_macos.sh"
-              "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql_macos.sh"
-            else
-              echo "$RUNNER_OS is not supported"
-              exit 1
-            fi
+              if [ "$RUNNER_OS" == "Linux" ]; then
+                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql.sh"
+                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql.sh"
+              elif [ "$RUNNER_OS" == "Windows" ]; then
+                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql_windows.sh"
+                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql_windows.sh"
+              elif [ "$RUNNER_OS" == "macOS" ]; then
+                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql_macos.sh"
+                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql_macos.sh"
+              else
+                echo "$RUNNER_OS is not supported"
+                exit 1
+              fi
 
         - if: inputs.DB-name == 'MySQL' && (runner.os == 'Linux' || runner.os == 'macOS')
           name: Start MySQL Service
@@ -181,10 +181,10 @@ runs:
           with:
               host port: 3306 # Optional, default value is 3306. The port of host
               container port: 3306 # Optional, default value is 3306. The port of container
-              mysql version: '8.0' # Optional, default value is "latest". The version of the MySQL
-              mysql database: 'mysql' # Optional, default value is "test". The specified database which will be create
+              mysql version: "8.0" # Optional, default value is "latest". The version of the MySQL
+              mysql database: "mysql" # Optional, default value is "test". The specified database which will be create
               mysql root password: mysql # Required if "mysql user" is empty, default is empty. The root superuser password
-              mysql user: 'root' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
+              mysql user: "root" # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
               mysql password: mysql # Required if "mysql user" exists. The password for the "mysql user"
 
         - if: inputs.DB-name == 'MySQL' && runner.os == 'Windows'
@@ -193,10 +193,10 @@ runs:
           with:
               host port: 3307# Optional, default value is 3306. The port of host
               container port: 3307# Optional, default value is 3306. The port of container
-              mysql version: '8.0'
-              mysql database: 'mysql'
+              mysql version: "8.0"
+              mysql database: "mysql"
               mysql root password: mysql
-              mysql user: 'root'
+              mysql user: "root"
               mysql password: mysql
 
         - if: inputs.DB-name == 'MySQL' && runner.os == 'Windows'
@@ -205,8 +205,8 @@ runs:
           with:
               host port: 3308
               container port: 3308
-              mysql version: '8.0'
-              mysql database: 'mysql'
+              mysql version: "8.0"
+              mysql database: "mysql"
               mysql root password: mysql
-              mysql user: 'root'
+              mysql user: "root"
               mysql password: mysql
