--- a/.github/workflows/polystore-benchmark-test.yml
+++ b/.github/workflows/polystore-benchmark-test.yml
@@ -41,7 +41,7 @@ jobs:
           - name: Run DB
             uses: ./.github/actions/dbRunner
             with:
-              DB-name: "IoTDB12"
+              DB-name: "Parquet"
 
           - name: Run PostgreSQL
             shell: bash
@@ -63,7 +63,7 @@ jobs:
           - name: Change IGinX config
             uses: ./.github/actions/confWriter
             with:
-              DB-name: "IoTDB12"
+              DB-name: "Parquet"
               Set-Filter-Fragment-OFF: "true"
 
           # start udf path test first to avoid being effected
@@ -81,7 +81,16 @@ jobs:
           - name: set client test context
             uses: ./.github/actions/context
             with:
-              DB-name: "IoTDB12"
+              DB-name: "Parquet"
               shell: client-before
+
+          - name: Compile Java file
+            shell: bash
+            run: |
+              chmod +x ${GITHUB_WORKSPACE}/test/src/test/java/cn/edu/tsinghua/iginx/integration/polybench/TPCHDataInsertion.java
+              javac -d . ${GITHUB_WORKSPACE}/test/src/test/java/cn/edu/tsinghua/iginx/integration/polybench/TPCHDataInsertion.java
+
+          - name: Start storing data
+            run: java -cp . ${GITHUB_WORKSPACE}/test/src/test/java/cn/edu/tsinghua/iginx/integration/polybench/TPCHDataInsertion.java
 
 
