--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -176,37 +176,28 @@ runs:
               docker run --name mysql3 -e MYSQL_ROOT_PASSWORD=mysql -p 3308:3306 --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3 -d mysql:8.0.26
 
         - if: inputs.DB-name == 'MySQL' && runner.os == 'Windows'
-          name: Start MySQL Service 3306
-          uses: mirromutth/mysql-action@v1.1
-          with:
-              host port: 3306 # Optional, default value is 3306. The port of host
-              container port: 3306 # Optional, default value is 3306. The port of container
-              mysql version: "8.0" # Optional, default value is "latest". The version of the MySQL
-              mysql database: "mysql" # Optional, default value is "test". The specified database which will be create
-              mysql root password: mysql # Required if "mysql user" is empty, default is empty. The root superuser password
-              mysql user: "root" # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
-              mysql password: mysql # Required if "mysql user" exists. The password for the "mysql user"
+          name: Install MySQL
+          shell: bash
+          run: choco install mysql --params "/InstallLocation:./"
 
         - if: inputs.DB-name == 'MySQL' && runner.os == 'Windows'
-          name: Start MySQL Service 3307
-          uses: mirromutth/mysql-action@v1.1
-          with:
-              host port: 3307# Optional, default value is 3306. The port of host
-              container port: 3307# Optional, default value is 3306. The port of container
-              mysql version: "8.0"
-              mysql database: "mysql"
-              mysql root password: mysql
-              mysql user: "root"
-              mysql password: mysql
+          name: Configure and start MySQL instances
+          shell: bash
+          run: |
+            choco install tree
+            tree ./
+            mkdir ./mysql/data1 ./mysql/data2 ./mysql/data3
+            ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize-insecure --datadir=./mysql/data1 --port=3307
+            ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize-insecure --datadir=./mysql/data2 --port=3308
+            ./mysql/mysql-8.0.31-winx64/bin/mysqld --initialize-insecure --datadir=./mysql/data3 --port=3309
+            ./mysql/mysql-8.0.31-winx64/bin/mysqld --console --datadir=./mysql/data1 --port=3307 &
+            ./mysql/mysql-8.0.31-winx64/bin/mysqld --console --datadir=./mysql/data2 --port=3308 &
+            ./mysql/mysql-8.0.31-winx64/bin/mysqld --console --datadir=./mysql/data3 --port=3309 &
 
         - if: inputs.DB-name == 'MySQL' && runner.os == 'Windows'
-          name: Start MySQL Service 3308
-          uses: mirromutth/mysql-action@v1.1
-          with:
-              host port: 3308
-              container port: 3308
-              mysql version: "8.0"
-              mysql database: "mysql"
-              mysql root password: mysql
-              mysql user: "root"
-              mysql password: mysql
+          name: Setup Database for each instance
+          shell: bash
+          run: |
+            ./mysql/mysql-8.0.31-winx64/bin/mysql -u root --port=3307
+            ./mysql/mysql-8.0.31-winx64/bin/mysql -u root --port=3308
+            ./mysql/mysql-8.0.31-winx64/bin/mysql -u root --port=3309
