--- a/.github/workflows/polystore-benchmark-test.yml
+++ b/.github/workflows/polystore-benchmark-test.yml
@@ -141,8 +141,14 @@ jobs:
                 Set-Filter-Fragment-OFF: "true"
 
           # start udf path test first to avoid being effected
+            - name: Stop IGinX
+              uses: ./.github/actions/iginxRunner
+              with:
+                version: ${VERSION}
+                if-stop: "true"
+
             - name: Start IGinX
-              uses: ./IGinX/.github/actions/iginxRunner
+              uses: ./.github/actions/regressionTestRunner
               with:
                 version: ${VERSION}
                 if-test-udf: "true"
