--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,10 +73,13 @@ jobs:
                   commit-message: "chore(repo): update maven repository"
                   title: "chore(repo): update maven repository"
     upload-session-py:
-        name: Upload Session to Github Release
+        name: Upload Session to PyPI
         runs-on: ubuntu-latest
+        environment:
+            name: pypi
+            url: https://pypi.org/p/<your-pypi-project-name>
         permissions:
-            contents: write
+            id-token: write
         steps:
             - uses: actions/checkout@v4
             - uses: actions/setup-python@v2
@@ -87,9 +90,6 @@ jobs:
             - name: package
               working-directory: session_py/iginx
               run: python setup.py sdist bdist_wheel
-            - name: upload
-              uses: svenstaro/upload-release-action@v2
-              with:
-                  file: "session_py/iginx/dist/*"
-                  file_glob: true
-                  overwrite: true
+            - name: Publish package distributions to PyPI
+              uses: pypa/gh-action-pypi-publish@release/v1
+              working-directory: session_py/iginx
